feat: 프로필 메뉴 추가
feat: 프로필 메뉴 추가

--- a/myworld/index.html
+++ b/myworld/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kim 의 미니홈피 :: 나의 세상, 마이 월드</title>
     <link href="./index.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/0983b954b9.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="background">
@@ -24,8 +28,25 @@
                 <div class="left_header_gray"></div>
                 <div class="left_header_line"></div>
               </div>
-              <div class="left_profile"></div>
-              <div class="left_body_footer"></div>
+              <div class="left_profile">
+                <i class="fa-solid fa-user"></i>
+                <span>name</span>
+                <i class="fa-solid fa-phone"></i>
+                <span>phone</span>
+                <i class="fa-solid fa-envelope"></i>
+                <span>e-mail</span>
+                <i class="fa-brands fa-square-instagram"></i>
+                <span>insta</span>
+              </div>
+              <div class="left_body_footer">
+                <span>오늘의 기분</span>
+                <select>
+                  <option>😀</option>
+                  <option>🫥</option>
+                  <option>😡</option>
+                  <option>❤️‍🔥</option>
+                </select>
+              </div>
             </div>
           </div>
           <div class="wrapper_right"></div>
