feat: 오늘의 기분 기능 추가, 메인 타이틀 추가
feat: 오늘의 기분 기능 추가, 메인 타이틀 추가

--- a/myworld/index.html
+++ b/myworld/index.html
@@ -29,27 +29,42 @@
                 <div class="left_header_line"></div>
               </div>
               <div class="left_profile">
-                <i class="fa-solid fa-user"></i>
-                <span>name</span>
-                <i class="fa-solid fa-phone"></i>
-                <span>phone</span>
-                <i class="fa-solid fa-envelope"></i>
-                <span>e-mail</span>
-                <i class="fa-brands fa-square-instagram"></i>
-                <span>insta</span>
+                <div class="profile_detail">
+                  <i class="fa-solid fa-user"></i>
+                  name
+                </div>
+                <div class="profile_detail">
+                  <i class="fa-solid fa-phone"></i> phone
+                </div>
+                <div class="profile_detail">
+                  <i class="fa-solid fa-envelope"></i> e-mail
+                </div>
+                <div class="profile_detail">
+                  <i class="fa-brands fa-square-instagram"></i> insta
+                </div>
               </div>
               <div class="left_body_footer">
-                <span>오늘의 기분</span>
-                <select>
-                  <option>😀</option>
-                  <option>🫥</option>
-                  <option>😡</option>
-                  <option>❤️‍🔥</option>
-                </select>
+                <div class="footer_feel">
+                  <div class="footer_title">오늘의 기분</div>
+                  <select class="footer_emoji">
+                    <option>😀</option>
+                    <option>🫥</option>
+                    <option>😡</option>
+                    <option>❤️‍🔥</option>
+                  </select>
+                </div>
               </div>
             </div>
           </div>
-          <div class="wrapper_right"></div>
+          <div class="wrapper_right">
+            <div class="right_header">
+              <div class="right_header_title">나의 세상, 마이 월드</div>
+              <button class="right_header_setting">미니홈피설정 ▶</button>
+            </div>
+            <div class="right_body">
+              <iframe src="./home/home.html"></iframe>
+            </div>
+          </div>
         </div>
       </div>
     </div>
