feat: class 이름변경
feat: class 이름변경

--- a/myworld/home/home.html
+++ b/myworld/home/home.html
@@ -21,7 +21,7 @@
           <div class="home_title">My Photos</div>
           <div class="home_subtitle">Introduce yourself</div>
         </div>
-        <div class="body_contents"></div>
+        <div class="body_photos"></div>
       </div>
     </div>
   </body>
