feat: 바탕 배경 html 구조  재생성
feat: 바탕 배경 html 구조  재생성

--- a/myworld/index.html
+++ b/myworld/index.html
@@ -13,56 +13,60 @@
   <body>
     <div class="background">
       <div class="outerbox">
-        <div class="wrapper">
-          <div class="wrapper_left">
-            <div class="left_header">
-              <div class="today">
-                <span>today</span>
-                <span>5</span>
-                <span> | total</span>
-                <span>12345</span>
+        <div class="outerLine">
+          <div class="outerWapper">
+            <div class="wrapper">
+              <div class="wrapper_left">
+                <div class="left_header">
+                  <div class="today">
+                    <span>today</span>
+                    <span>5</span>
+                    <span> | total</span>
+                    <span>12345</span>
+                  </div>
+                </div>
+                <div class="left_body">
+                  <div class="left_body_header">
+                    <div class="left_header_gray"></div>
+                    <div class="left_header_line"></div>
+                  </div>
+                  <div class="left_profile">
+                    <div class="profile_detail">
+                      <i class="fa-solid fa-user"></i>
+                      name
+                    </div>
+                    <div class="profile_detail">
+                      <i class="fa-solid fa-phone"></i> phone
+                    </div>
+                    <div class="profile_detail">
+                      <i class="fa-solid fa-envelope"></i> e-mail
+                    </div>
+                    <div class="profile_detail">
+                      <i class="fa-brands fa-square-instagram"></i> insta
+                    </div>
+                  </div>
+                  <div class="left_body_footer">
+                    <div class="footer_feel">
+                      <div class="footer_title">오늘의 기분</div>
+                      <select class="footer_emoji">
+                        <option>😀</option>
+                        <option>🫥</option>
+                        <option>😡</option>
+                        <option>❤️‍🔥</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-            <div class="left_body">
-              <div class="left_body_header">
-                <div class="left_header_gray"></div>
-                <div class="left_header_line"></div>
-              </div>
-              <div class="left_profile">
-                <div class="profile_detail">
-                  <i class="fa-solid fa-user"></i>
-                  name
+              <div class="wrapper_right">
+                <div class="right_header">
+                  <div class="right_header_title">나의 세상, 마이 월드</div>
+                  <button class="right_header_setting">미니홈피설정 ▶</button>
                 </div>
-                <div class="profile_detail">
-                  <i class="fa-solid fa-phone"></i> phone
-                </div>
-                <div class="profile_detail">
-                  <i class="fa-solid fa-envelope"></i> e-mail
-                </div>
-                <div class="profile_detail">
-                  <i class="fa-brands fa-square-instagram"></i> insta
+                <div class="right_body">
+                  <iframe src="./home/home.html"></iframe>
                 </div>
               </div>
-              <div class="left_body_footer">
-                <div class="footer_feel">
-                  <div class="footer_title">오늘의 기분</div>
-                  <select class="footer_emoji">
-                    <option>😀</option>
-                    <option>🫥</option>
-                    <option>😡</option>
-                    <option>❤️‍🔥</option>
-                  </select>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="wrapper_right">
-            <div class="right_header">
-              <div class="right_header_title">나의 세상, 마이 월드</div>
-              <button class="right_header_setting">미니홈피설정 ▶</button>
-            </div>
-            <div class="right_body">
-              <iframe src="./home/home.html"></iframe>
             </div>
           </div>
         </div>
