feat: game 페이지 생성
feat: game 페이지 생성

--- a/myworld/index.html
+++ b/myworld/index.html
@@ -65,6 +65,7 @@
                 </div>
                 <div class="right_body">
                   <iframe src="./home/home.html"></iframe>
+                  <iframe src="./game/game.html"></iframe>
                 </div>
               </div>
             </div>
