feat: 끝말잇기 html 구조 생성
feat: 끝말잇기 html 구조 생성

--- a/myworld/home/home.html
+++ b/myworld/home/home.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
     <link href="./home.css" rel="stylesheet" />
   </head>
   <body>
     <div class="wrapper_home">
       <div class="home_header">
-        <div class="contents_title">
+        <div class="home_contents_title">
           <div class="home_title">Updated news</div>
           <div class="home_subtitle">TODAy STORy</div>
         </div>
