--- a/myworld/game/game.html
+++ b/myworld/game/game.html
@@ -24,11 +24,17 @@
         </div>
         <div class="word_text">
           <input class="word_input" id="wordInput" />
-          <button class="word_btn" id="wordBTN">입력</button>
+          <button class="word_btn" id="wordBtn">입력</button>
         </div>
         <div class="word_result" id="wordResult">결과!</div>
       </div>
-      <div class="game_container"></div>
+      <div class="game_container">
+        <img src="./game2.png" alt="로또" />
+        <div class="body_title">LOTTO</div>
+        <div class="body_subtitle">버튼을 누르세요</div>
+        <div class="game_lotto" id="lotto">1 2 3 4 5 6</div>
+        <button class="lotto_btn" id="lottoBtn">번호생성</button>
+      </div>
     </div>
     <script src="./game.js"></script>
   </body>
