--- a/myworld/game/game.html
+++ b/myworld/game/game.html
@@ -22,10 +22,15 @@
         <div class="body_subtitle">
           제시어 : <span class="word_span" id="word">마이월드</span>
         </div>
-        <div class="word_text">
-          <input class="word_input" id="wordInput" autocomplete="off" />
+        <form class="word_text" id="wordForm">
+          <input
+            class="word_input"
+            id="wordInput"
+            autocomplete="off"
+            maxlength="10"
+          />
           <button class="word_btn" id="wordBtn">입력</button>
-        </div>
+        </form>
 
         <div class="word_result" id="wordResult">. . .</div>
       </div>
