feat: imege 경로 변경
feat: imege 경로 변경

--- a/myworld/game/game.html
+++ b/myworld/game/game.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="game_container">
-        <img src="./game1.png" alt="끝말잇기" />
+        <img src="../imeges/game1.png" alt="끝말잇기" />
         <div class="body_title">끝말잇기</div>
         <div class="body_subtitle">
           제시어 : <span class="word_span" id="word">마이월드</span>
@@ -26,6 +26,7 @@
           <input
             class="word_input"
             id="wordInput"
+            placeholder="단어를 입력해 주세요"
             autocomplete="off"
             maxlength="10"
           />
@@ -35,7 +36,7 @@
         <div class="word_result" id="wordResult">. . .</div>
       </div>
       <div class="game_container">
-        <img src="./game2.png" alt="로또" />
+        <img src="../imeges/game2.png" alt="로또" />
         <div class="body_title">LOTTO</div>
         <div class="body_subtitle">버튼을 누르세요</div>
         <div class="game_lotto" id="lotto">
