feat: music 폴더 생성 및 html 구조 생성
feat: music 폴더 생성 및 html 구조 생성

--- a/myworld/index.html
+++ b/myworld/index.html
@@ -64,7 +64,7 @@
                   <button class="right_header_setting">미니홈피설정 ▶</button>
                 </div>
                 <div class="right_body">
-                  <iframe src="./game/game.html"></iframe>
+                  <iframe src="./music/musicbox.html"></iframe>
                 </div>
               </div>
             </div>
