feat: music title 추가
feat: music title 추가

--- a/myworld/music/musicbox.html
+++ b/myworld/music/musicbox.html
@@ -10,16 +10,16 @@
     <div class="wrapper_music">
       <div class="music_header">
         <div class="music_contents_title">
-          <div class="music_title"></div>
-          <div class="music_subtitle"></div>
+          <div class="music_title">추억의 BGM</div>
+          <div class="music_subtitle">TODAy CHOICE</div>
         </div>
       </div>
       <div class="devideLine"></div>
     </div>
     <div class="music_body">
       <div class="music_contents_title">
-        <div class="music_title"></div>
-        <div class="music_subtitle"></div>
+        <div class="music_title">추억의 BGM</div>
+        <div class="music_subtitle">TODAy CHOICE</div>
       </div>
       <div class="music_table"></div>
     </div>
