--- a/myworld/music/musicbox.html
+++ b/myworld/music/musicbox.html
@@ -13,15 +13,32 @@
           <div class="music_title">추억의 BGM</div>
           <div class="music_subtitle">TODAy CHOICE</div>
         </div>
+        <div class="devideLine"></div>
+        <div class="album_contents">
+          <div class="album">
+            <img src="../imeges/music01.png" />
+            <div class="album_name">Y(Please Tell Me Why)</div>
+            <div class="album_singer">프리스타일</div>
+          </div>
+          <div class="album">
+            <img src="../imeges/music02.png" />
+            <div class="album_name">눈의 꽃</div>
+            <div class="album_singer">박효신</div>
+          </div>
+          <div class="album">
+            <img src="../imeges/music03.png" />
+            <div class="album_name">사랑했나봐</div>
+            <div class="album_singer">윤도현</div>
+          </div>
+        </div>
       </div>
-      <div class="devideLine"></div>
-    </div>
-    <div class="music_body">
-      <div class="music_contents_title">
-        <div class="music_title">추억의 BGM</div>
-        <div class="music_subtitle">TODAy CHOICE</div>
+      <div class="music_body">
+        <div class="music_contents_title">
+          <div class="music_title">추억의 BGM</div>
+          <div class="music_subtitle">TODAy CHOICE</div>
+        </div>
+        <div class="music_table"></div>
       </div>
-      <div class="music_table"></div>
     </div>
   </body>
 </html>
