feat: 쥬크박스 테이블 생성
feat: 쥬크박스 테이블 생성

--- a/myworld/music/musicbox.html
+++ b/myworld/music/musicbox.html
@@ -18,17 +18,17 @@
           <div class="album">
             <img src="../imeges/music01.png" />
             <div class="album_name">Y(Please Tell Me Why)</div>
-            <div class="album_singer">프리스타일</div>
+            <div class="album_artist">프리스타일</div>
           </div>
           <div class="album">
             <img src="../imeges/music02.png" />
             <div class="album_name">눈의 꽃</div>
-            <div class="album_singer">박효신</div>
+            <div class="album_artist">박효신</div>
           </div>
           <div class="album">
             <img src="../imeges/music03.png" />
             <div class="album_name">사랑했나봐</div>
-            <div class="album_singer">윤도현</div>
+            <div class="album_artist">윤도현</div>
           </div>
         </div>
       </div>
@@ -37,7 +37,46 @@
           <div class="music_title">추억의 BGM</div>
           <div class="music_subtitle">TODAy CHOICE</div>
         </div>
-        <div class="music_table"></div>
+        <table class="music_table">
+          <tr>
+            <th class="table_checkbox">
+              <input type="checkbox" />
+            </th>
+            <th class="table_number">번호</th>
+            <th class="table_songname">곡명</th>
+            <th class="table_artist">아티스트</th>
+          </tr>
+          <tr>
+            <td class="table_checkbox"><input type="checkbox" /></td>
+            <td class="in_table_number">1</td>
+            <td class="in_table_songname">눈의 꽃</td>
+            <td class="in_table_artist">박효신</td>
+          </tr>
+          <tr>
+            <td class="table_checkbox"><input type="checkbox" /></td>
+            <td class="in_table_number">2</td>
+            <td class="in_table_songname">사랑스러워</td>
+            <td class="in_table_artist">김종국</td>
+          </tr>
+          <tr>
+            <td class="table_checkbox"><input type="checkbox" /></td>
+            <td class="in_table_number">3</td>
+            <td class="in_table_songname">내사람: Partner For Life</td>
+            <td class="in_table_artist">SG 워너비</td>
+          </tr>
+          <tr>
+            <td class="table_checkbox"><input type="checkbox" /></td>
+            <td class="in_table_number">4</td>
+            <td class="in_table_songname">Love Love Love</td>
+            <td class="in_table_artist">에픽하이</td>
+          </tr>
+          <tr>
+            <td class="table_checkbox"><input type="checkbox" /></td>
+            <td class="in_table_number">5</td>
+            <td class="in_table_songname">애인있어요</td>
+            <td class="in_table_artist">이은미</td>
+          </tr>
+        </table>
       </div>
     </div>
   </body>
