--- a/myworld/index.html
+++ b/myworld/index.html
@@ -16,6 +16,7 @@
         <div class="outerLine">
           <div class="outerWapper">
             <div class="wrapper">
+              <!-- 왼쪽 페이지 -->
               <div class="wrapper_left">
                 <div class="left_header">
                   <div class="today">
@@ -58,19 +59,27 @@
                   </div>
                 </div>
               </div>
+              <!-- 오른쪽 페이지 -->
               <div class="wrapper_right">
                 <div class="right_header">
                   <div class="right_header_title">나의 세상, 마이 월드</div>
                   <button class="right_header_setting">미니홈피설정 ▶</button>
                 </div>
                 <div class="right_body">
-                  <iframe src="./music/musicbox.html"></iframe>
+                  <iframe src="./home/home.html" id="iframe"></iframe>
                 </div>
+              </div>
+              <!-- 네이게이션 -->
+              <div class="navigation">
+                <button class="nav_btn" id="homeMenu">HOME</button>
+                <button class="nav_btn" id="gameMenu">GAME</button>
+                <button class="nav_btn" id="musicMenu">MUSIC</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
