feat: 이메일 유효성 검사 추가
feat: 이메일 유효성 검사 추가

--- a/class/01-signup/signup.html
+++ b/class/01-signup/signup.html
@@ -14,46 +14,46 @@
           <div class="signup_box">
             <div class="signup_title">이메일</div>
             <input type="text" placeholder="abcd123@mail.com" id="emailInput" />
-            <div class="empty_warning" id="emptyWarning">
+            <div class="empty_warning" id="emailWarning">
               * 이메일을 입력해 주세요
             </div>
           </div>
           <div class="signup_box">
             <div class="signup_title">이름</div>
             <input type="text" id="nameInput" />
-            <div class="empty_warning" id="emptyWarning">
+            <div class="empty_warning" id="nameWarning">
               * 이름을 입력해 주세요
             </div>
           </div>
           <div class="signup_box">
             <div class="signup_title">비밀번호</div>
             <input type="password" id="passwordInput" />
-            <div class="empty_warning" id="emptyWarning">
+            <div class="empty_warning" id="passwordWarning">
               * 비밀번호를 입력해 주세요
             </div>
           </div>
           <div class="signup_box">
             <div class="signup_title">비밀번호 확인</div>
             <input type="password" id="passwordConfirmInput" />
-            <div class="empty_warning" id="emptyWarning">
+            <div class="empty_warning" id="passwordConfirmWarning">
               * 비밀번호 확인을 입력해 주세요
             </div>
           </div>
           <div class="signup_gender">
             <div class="gender_contents">
-              <input type="radio" name="gender" id="gender" />
+              <input type="radio" name="gender" id="female" />
               <div class="gender_title">여성</div>
             </div>
             <div class="gender_contents">
-              <input type="radio" name="gender" id="gender" />
+              <input type="radio" name="gender" id="male" />
               <div class="gender_title">남성</div>
             </div>
             <div class="gender_contents">
-              <input type="radio" name="gender" id="gender" />
+              <input type="radio" name="gender" id="other" />
               <div class="gender_title">비공개</div>
             </div>
           </div>
-          <div class="empty_warning" id="emptyWarning">
+          <div class="empty_warning" id="genderWarning">
             * 성별을 선택해 주세요
           </div>
           <div class="signup_checkbox">
@@ -63,7 +63,7 @@
               동의합니다.
             </div>
           </div>
-          <div class="empty_warning" id="emptyWarning">
+          <div class="empty_warning" id="agreedCheckWarning">
             * 약관에 동의해 주세요
           </div>
         </div>
